icons and col tag

--- a/landing_new.html
+++ b/landing_new.html
@@ -69,15 +69,10 @@
             </div>
         </div>
     </div>
-<section id="blurb" class="container services">
-    <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                  <div class="navy-line"></div> 
-                    <h1>SolveSpark is the world's first centralized "crowd-solving" platform</h1>
-                    <p>Join in and share your ideas, insights, struggles, and dreams.  Your input will help create traction and build positive change in your community and around the world. </p>
-                                   <div class="row">
 
+<section id="blurb" class="container services">
+    <div class="container">\
+        <div class="row">
                 <div class="col-md-2">
                     <div class="row">
                     <i class="fa fa-users big-icon"></i>
@@ -140,6 +135,11 @@
                     </div> 
                 </div>
             </div>
+                        <div class="row">
+                <div class="col-lg-12 text-center">
+                  <div class="navy-line"></div> 
+                    <h1>SolveSpark is the world's first centralized "crowd-solving" platform</h1>
+                    <p>Join in and share your ideas, insights, struggles, and dreams.  Your input will help create traction and build positive change in your community and around the world. </p>
                     <div class="navy-line"></div>
                 </div>
                    
@@ -149,8 +149,9 @@
 
 <section id="trending">
     <div class="wrapper wrapper-content">
+          <div class="col-lg-10">
     <div class="row">
-        <h1>Trending issues...</h1>
+        <h1>Trending issues</h1>
                 <div class="col-md-3">
                     <div class="ibox">
                         <div class="ibox-content product-box">
@@ -373,6 +374,7 @@
                 </div>
             </div>
         </div>
+    </div>
 </section>
 
 <!--<section id="about" class="container services">
