--- a/landing_new.html
+++ b/landing_new.html
@@ -79,9 +79,13 @@
                     <h1>SolveSpark is the world's first centralized "crowd-solving" platform</h1>
                     <p>Join in and share your ideas, insights, struggles, and dreams.  Your input will help create traction and build positive change in your community and around the world. </p>
                     <div class="navy-line"></div>
-                
-                   </div>
-
+                </div>
+                   </div></div>
+               </section>
+<section id="icons" class="container services">
+    <div class="container">
+                        
+                <div class="col-lg-12 text-center">
                     <div class="row">
                 <div class="col-md-2">
                     <div class="row">
@@ -146,12 +150,10 @@
                 </div>
             </div>
         </div>
-
+</div>
 </section>
 
 <section id="submit">
-
-   <div class="wrapper wrapper-content">
           <div class="col-lg-10">
     <div class="row">
         <h1>Submit a Problem</h1>
@@ -159,7 +161,7 @@
                                         </button> </span>
                                         </div>
                                         </div>
-                                        </div></div>
+                                        </div>
 </section>
 
 
