--- a/landing_new.html
+++ b/landing_new.html
@@ -153,14 +153,18 @@
 </div>
 </section>
 
-<section id="submit">
-          <div class="col-lg-10">
-    <div class="row">
+<section id="submit" class="container services">
+    <div class="container">
+
+    <div class="wrapper wrapper-content">
+          <div class="col-lg-8 text-center">
+    <div class="row"> 
         <h1>Submit a Problem</h1>
 <div class="input-group"><input type="text" class="form-control"> <span class="input-group-btn"> <button type="button" class="btn btn-primary">Submit
                                         </button> </span>
                                         </div>
                                         </div>
+                                        </div></div>
                                         </div>
 </section>
 
