--- a/landing_new.html
+++ b/landing_new.html
@@ -87,7 +87,7 @@
                         
                 <div class="col-lg-12 text-center">
                     <div class="row">
-                <div class="col-md-2">
+                <div class="col-md-1">
                     <div class="row">
                     <i class="fa fa-users big-icon"></i>
                     </div> 
@@ -160,7 +160,8 @@
           <div class="col-lg-8 text-center">
     <div class="row"> 
         <h1>Submit a Problem</h1>
-<div class="input-group"><input type="text" class="form-control"> <span class="input-group-btn"> <button type="button" class="btn btn-primary">Submit
+<div class="input-group"><input type="text" class="form-control"> <span class="input-group-btn"> <button type="button" class="btn btn-primary" style=
+    "background-color: #4CAF50">Submit
                                         </button> </span>
                                         </div>
                                         </div>
