--- a/demo.html
+++ b/demo.html
@@ -77,21 +77,21 @@
         <div class="col-lg-12 text-left">
 
 <div class="row">
-<h2 style="text-align:left;">Our demo is not quite ready for show, yet!</h2>
+<h2 style="text-align:left;">SolveSpark is currently under development!</h2>
 <h2 style="text-align:left;">Please feel free to surf our Problem and Idea databases!</h2>
 <p>
 <ul>
-<h3 style="text-align:left;"><a href="https://vast-oasis-7387.herokuapp.com/ProblemFeed.php">Problem Feed</a></h3>
-<h3 style="text-align:left;"><a href="https://vast-oasis-7387.herokuapp.com/IdeaFeed.php">Idea Feed</a></h3>
+<h3 style="text-align:left;"><a href="https://solvespark.com/ProblemFeed.php">Problem Feed</a></h3>
+<h3 style="text-align:left;"><a href="https://solvespark.com/IdeaFeed.php">Idea Feed</a></h3>
 <br><br><br>
 <h2 style="text-align:left;">...and feel free to submit your own entries!</h2>
 
-<h3 style="text-align:left;"><a href="https://vast-oasis-7387.herokuapp.com/ProblemSubmit.html">Submit a problem</a></h3>
-<h3 style="text-align:left;"><a href="https://vast-oasis-7387.herokuapp.com/IdeaSubmit.html">Submit an idea</a></h3>
+<h3 style="text-align:left;"><a href="https://solvespark.com/ProblemSubmit.html">Submit a problem</a></h3>
+<h3 style="text-align:left;"><a href="https://solvespark.com/IdeaSubmit.html">Submit an idea</a></h3>
 <br><br><br>
 
 <h2 style="text-align:left;">Other pages </h2> 
-<h3 style="text-align:left;"><a href="https://vast-oasis-7387.herokuapp.com/ProblemView.php">Problem View (conceptual, with dummy-data)</a><h3>
+<h3 style="text-align:left;"><a href="https://solvespark.com/ProblemView.php">Problem View (conceptual, with dummy-data)</a><h3>
 <!--<a href="https://vast-oasis-7387.herokuapp.com/implementation.html">Implementation</a>
 <a href="https://vast-oasis-7387.herokuapp.com/solution.html">Solution</a>-->
 </ul>
