--- a/demo.html
+++ b/demo.html
@@ -81,17 +81,17 @@
 <h2 style="text-align:left;">Please feel free to surf our Problem and Idea databases!</h2>
 <p>
 <ul>
-<h3 style="text-align:left;"><a href="https://solvespark.com/ProblemFeed.php">Problem Feed</a></h3>
-<h3 style="text-align:left;"><a href="https://solvespark.com/IdeaFeed.php">Idea Feed</a></h3>
+<h3 style="text-align:left;"><a href="http://www.solvespark.com/ProblemFeed.php">Problem Feed</a></h3>
+<h3 style="text-align:left;"><a href="http://www.solvespark.com/IdeaFeed.php">Idea Feed</a></h3>
 <br><br><br>
 <h2 style="text-align:left;">...and feel free to submit your own entries!</h2>
 
-<h3 style="text-align:left;"><a href="https://solvespark.com/ProblemSubmit.html">Submit a problem</a></h3>
-<h3 style="text-align:left;"><a href="https://solvespark.com/IdeaSubmit.html">Submit an idea</a></h3>
+<h3 style="text-align:left;"><a href="http://www.solvespark.com/ProblemSubmit.html">Submit a problem</a></h3>
+<h3 style="text-align:left;"><a href="http://www.solvespark.com/IdeaSubmit.html">Submit an idea</a></h3>
 <br><br><br>
 
 <h2 style="text-align:left;">Other pages </h2> 
-<h3 style="text-align:left;"><a href="https://solvespark.com/ProblemView.php">Problem View (conceptual, with dummy-data)</a><h3>
+<h3 style="text-align:left;"><a href="http://www.solvespark.com/ProblemView.php">Problem View (conceptual, with dummy-data)</a><h3>
 <!--<a href="https://vast-oasis-7387.herokuapp.com/implementation.html">Implementation</a>
 <a href="https://vast-oasis-7387.herokuapp.com/solution.html">Solution</a>-->
 </ul>
