--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <!-- Custom styles for this template -->
         <link href="css/style.css" rel="stylesheet">
-	<link href="css/style3.css" rel="stylesheet">
+<!--	<link href="css/style3.css" rel="stylesheet"> -->
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
