cleaned up page

--- a/demo.html
+++ b/demo.html
@@ -74,24 +74,22 @@
  
 <section id="main" class="container services">
     <div class="row">
-        <div class="col-lg-12 text-left">
+        <div class="col-sm-12">
 
 <div class="row">
-<h2 style="text-align:left;">SolveSpark is currently under development!</h2>
-<h2 style="text-align:left;">Please feel free to surf our Problem and Idea databases!</h2>
+<h2 style="text-align:center;">SolveSpark is currently under development!</h2>
+<h2 style="text-align:left;">Available Features:</h2>
 <p>
 <ul>
-<h3 style="text-align:left;"><a href="http://www.solvespark.com/ProblemFeed.php">Problem Feed</a></h3>
-<h3 style="text-align:left;"><a href="http://www.solvespark.com/IdeaFeed.php">Idea Feed</a></h3>
-<br><br><br>
-<h2 style="text-align:left;">...and feel free to submit your own entries!</h2>
+<h4 style="text-align:left;"><a href="http://www.solvespark.com/ProblemFeed.php">Problem Feed</a></h4>
+<h4 style="text-align:left;"><a href="http://www.solvespark.com/IdeaFeed.php">Idea Feed</a></h4>
+<br><br>
 
-<h3 style="text-align:left;"><a href="http://www.solvespark.com/ProblemSubmit.html">Submit a problem</a></h3>
-<h3 style="text-align:left;"><a href="http://www.solvespark.com/IdeaSubmit.html">Submit an idea</a></h3>
-<br><br><br>
+<h4 style="text-align:left;"><a href="https://vast-oasis-7387.herokuapp.com/ProblemSubmit.html">Submit a problem</a></h4>
+<h4 style="text-align:left;"><a href="https://vast-oasis-7387.herokuapp.com/IdeaSubmit.html">Submit an idea</a></h4>
+<br><br>
 
-<h2 style="text-align:left;">Other pages </h2> 
-<h3 style="text-align:left;"><a href="http://www.solvespark.com/ProblemView.php">Problem View (conceptual, with dummy-data)</a><h3>
+<h4 style="text-align:left;"><a href="http://www.solvespark.com/ProblemView.php">Problem View (conceptual, only)</a><h4>
 <!--<a href="https://vast-oasis-7387.herokuapp.com/implementation.html">Implementation</a>
 <a href="https://vast-oasis-7387.herokuapp.com/solution.html">Solution</a>-->
 </ul>
