adding form stuff

--- a/demo.html
+++ b/demo.html
@@ -74,7 +74,7 @@
  
 <section id="main" class="container services">
     <div class="row">
-        <div class="col-sm-12">
+        <div class="col-sm-12 text-center">
 
 <div class="row">
 <h2 style="text-align:center;">SolveSpark is currently under development!</h2>
