--- a/demo.html
+++ b/demo.html
@@ -78,19 +78,19 @@
 
 <div class="row">
 <p>
-<h2 style="text-align:center;">SolveSpark is currently under development!</h2>
+<h2>SolveSpark is currently under development!</h2>
 <br><br>
-<h3 style="text-align:center;">Available Features</h3>
+<h3>Available Features</h3>
 <ul>
-<h4 style="text-align:center;"><a href="http://www.solvespark.com/ProblemFeed.php">Problem Feed</a></h4>
-<h4 style="text-align:center;"><a href="http://www.solvespark.com/IdeaFeed.php">Idea Feed</a></h4>
+<h4><a href="http://www.solvespark.com/ProblemFeed.php">Problem Feed</a></h4>
+<h4><a href="http://www.solvespark.com/IdeaFeed.php">Idea Feed</a></h4>
 <br><br>
 
-<h4 style="text-align:center;"><a href="https://vast-oasis-7387.herokuapp.com/ProblemSubmit.html">Submit a problem</a></h4>
-<h4 style="text-align:center;"><a href="https://vast-oasis-7387.herokuapp.com/IdeaSubmit.html">Submit an idea</a></h4>
+<h4><a href="https://vast-oasis-7387.herokuapp.com/ProblemSubmit.html">Submit a problem</a></h4>
+<h4><a href="https://vast-oasis-7387.herokuapp.com/IdeaSubmit.html">Submit an idea</a></h4>
 <br><br>
 
-<h4 style="text-align:center;"><a href="http://www.solvespark.com/ProblemView.php">Problem View (conceptual, only)</a><h4>
+<h4><a href="http://www.solvespark.com/ProblemView.php">Problem View (conceptual, only)</a><h4>
 <!--<a href="https://vast-oasis-7387.herokuapp.com/implementation.html">Implementation</a>
 <a href="https://vast-oasis-7387.herokuapp.com/solution.html">Solution</a>-->
 </ul>
