Change demo links to .herokuapp.com

--- a/demo.html
+++ b/demo.html
@@ -81,17 +81,17 @@
 <h2>SolveSpark is currently under development!</h2>
 <br><br>
 <h3>Available Features</h3>
-<h4><a href="http://www.solvespark.com/ProblemFeed.php">Problem Feed</a></h4>
-<h4><a href="http://www.solvespark.com/IdeaFeed.php">Idea Feed</a></h4>
+<h4><a href="http://www.solvespark.herokuapp.com/ProblemFeed.php">Problem Feed</a></h4>
+<h4><a href="http://www.solvespark.herokuapp.com/IdeaFeed.php">Idea Feed</a></h4>
 <br><br>
 
-<h4><a href="https://vast-oasis-7387.herokuapp.com/ProblemSubmit.html">Submit a problem</a></h4>
-<h4><a href="https://vast-oasis-7387.herokuapp.com/IdeaSubmit.html">Submit an idea</a></h4>
+<h4><a href="https://solvespark.herokuapp.com/ProblemSubmit.html">Submit a problem</a></h4>
+<h4><a href="https://solvespark.herokuapp.com/IdeaSubmit.html">Submit an idea</a></h4>
 <br><br>
 
-<h4><a href="http://www.solvespark.com/ProblemView.php">Problem View (conceptual, only)</a><h4>
-<!--<a href="https://vast-oasis-7387.herokuapp.com/implementation.html">Implementation</a>
-<a href="https://vast-oasis-7387.herokuapp.com/solution.html">Solution</a>-->
+<h4><a href="http://www.solvespark.herokuapp.com/ProblemView.php">Problem View (conceptual, only)</a><h4>
+<!--<a href="https://solvespark.herokuapp.com/implementation.html">Implementation</a>
+<a href="https://solvespark.herokuapp.com/solution.html">Solution</a>-->
 </p>
 </div>
 </section>
