updated 3 month timeline

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                           <h2>Outreach</h2>
                             <p>Reach out to potential interested parties and establish key relationships</p>
                           <!--  <a href="#" class="btn btn-xs btn-primary"> More info</a>-->
-                            <span class="vertical-date">Weeks 1 - 12 <br/> <small>Deadline: Saturday, June 10th</small> </span>
+                            <span class="vertical-date">Weeks 1 - 12 <br/> <small>Target: Saturday, June 10th</small> </span>
                         </div>
                     </div>
 
@@ -166,7 +166,7 @@
                             <p>Complete the prototype that would allow users to log in, submit information, receive alerts, and view basic analytics.
                             </p>
                             <!--<a href="#" class="btn btn-xs btn-primary"> More info</a>-->
-                            <span class="vertical-date"> Weeks 1 - 7<br/> <small>Deadline: Monday, May 1st</small> </span>
+                            <span class="vertical-date"> Weeks 1 - 7<br/> <small>Target: Monday, May 1st</small> </span>
                         </div>
                     </div>
                     <div class="vertical-timeline-block">
@@ -178,7 +178,7 @@
                             <p>Deploy website to a small group of users to begin populating database and gathering feedback to drive requirements and continuous development.
                             </p>
                             <!--<a href="#" class="btn btn-xs btn-primary"> More info</a>-->
-                            <span class="vertical-date">Weeks 7 - 12<br/> <small>Deadline: Saturday, June 10th</small> </span>
+                            <span class="vertical-date">Weeks 7 - 12<br/> <small>Target: Saturday, June 10th</small> </span>
                         </div>
                         </div>
                     
