--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ mixpanel.init("0cde89a4e40858e69b40bfdc9bf6a020");</script>
             </div>
         </div>
 </section>
-
+<!--
 <section id="timeline" class="timeline gray-section">
     <div class="container">
         <div class="row">
@@ -166,7 +166,7 @@ mixpanel.init("0cde89a4e40858e69b40bfdc9bf6a020");</script>
                         <div class="vertical-timeline-content">
                           <h2>Outreach</h2>
                             <p>Reach out to potential interested parties and establish key relationships</p>
-                          <!--  <a href="#" class="btn btn-xs btn-primary"> More info</a>-->
+                            <a href="#" class="btn btn-xs btn-primary"> More info</a>
                             <span class="vertical-date">Weeks 1 - 12 <br/> <small>Target: Saturday, September 9th</small> </span>
                         </div>
                     </div>
@@ -181,7 +181,7 @@ mixpanel.init("0cde89a4e40858e69b40bfdc9bf6a020");</script>
                             <h2>Prototype</h2>
                             <p>Complete the prototype that would allow users to log in, submit information, receive alerts, and view basic analytics.
                             </p>
-                            <!--<a href="#" class="btn btn-xs btn-primary"> More info</a>-->
+                            <a href="#" class="btn btn-xs btn-primary"> More info</a>
                             <span class="vertical-date"> Weeks 1 - 7<br/> <small>Target: Saturday, August 5th</small> </span>
                         </div>
                     </div>
@@ -193,7 +193,7 @@ mixpanel.init("0cde89a4e40858e69b40bfdc9bf6a020");</script>
                             <h2>Solicit Feedback</h2>
                             <p>Deploy website to a small group of users to begin populating database and gathering feedback to drive requirements and continuous development.
                             </p>
-                            <!--<a href="#" class="btn btn-xs btn-primary"> More info</a>-->
+                            <a href="#" class="btn btn-xs btn-primary"> More info</a>
                             <span class="vertical-date">Weeks 7 - 12<br/> <small>Target: Saturday, September 9th</small> </span>
                         </div>
                         </div>
@@ -212,7 +212,7 @@ mixpanel.init("0cde89a4e40858e69b40bfdc9bf6a020");</script>
         </div>
     </div>
 
-</section>
+</section> -->
 <section id="contact" class="gray-section contact">
         <div class="container">
             <div class="row m-b-lg">
@@ -249,7 +249,7 @@ mixpanel.init("0cde89a4e40858e69b40bfdc9bf6a020");</script>
             </div> 
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center m-t-lg m-b-lg">
-                    <p>&copy; 2017 Beth Lee <br/></p>
+                    <p>&copy; 2019 Beth Lee <br/></p>
                 </div>
             </div>
 
