updated year and facebook link

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ mixpanel.init("0cde89a4e40858e69b40bfdc9bf6a020");</script>
                     <p>SolveSpark is focused on creating a positive future for all.  While constructive criticism is encouraged, outright hatred or harassment will not be tolerated.  Solutions that result in the short term or long term harm of any people are not legitimate solutions.  SolveSpark will do its best to enforce these rules.</p>
                 </div>
             </div>
-        </div>
+        </divk
 </section>
 <!--
 <section id="timeline" class="timeline gray-section">
@@ -238,7 +238,7 @@ mixpanel.init("0cde89a4e40858e69b40bfdc9bf6a020");</script>
                         Follow us on social media:  
                     </p>
                     <ul class="list-inline social-icon">
-                        <li><a href="http://facebook.com/solvespark"><i class="fa fa-facebook"></i></a>
+                        <li><a href="https://www.facebook.com/solvespark"><i class="fa fa-facebook"></i></a>
                         </li>
                        <!-- <li><a href="#"><i class="fa fa-twitter"></i></a>
                         </li>
@@ -249,7 +249,7 @@ mixpanel.init("0cde89a4e40858e69b40bfdc9bf6a020");</script>
             </div> 
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center m-t-lg m-b-lg">
-                    <p>&copy; 2019 Beth Lee <br/></p>
+                    <p>&copy; 2020 Beth Lee <br/></p>
                 </div>
             </div>
 
