added timeline back

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ mixpanel.init("0cde89a4e40858e69b40bfdc9bf6a020");</script>
             </div>
         </divk
 </section>
-<!--
+
 <section id="timeline" class="timeline gray-section">
     <div class="container">
         <div class="row">
@@ -167,7 +167,7 @@ mixpanel.init("0cde89a4e40858e69b40bfdc9bf6a020");</script>
                           <h2>Outreach</h2>
                             <p>Reach out to potential interested parties and establish key relationships</p>
                             <a href="#" class="btn btn-xs btn-primary"> More info</a>
-                            <span class="vertical-date">Weeks 1 - 12 <br/> <small>Target: Saturday, September 9th</small> </span>
+                            <span class="vertical-date">Weeks 1 - 12 <br/> <small>Target: September 9th</small> </span>
                         </div>
                     </div>
 
@@ -182,7 +182,7 @@ mixpanel.init("0cde89a4e40858e69b40bfdc9bf6a020");</script>
                             <p>Complete the prototype that would allow users to log in, submit information, receive alerts, and view basic analytics.
                             </p>
                             <a href="#" class="btn btn-xs btn-primary"> More info</a>
-                            <span class="vertical-date"> Weeks 1 - 7<br/> <small>Target: Saturday, August 5th</small> </span>
+                            <span class="vertical-date"> Weeks 1 - 7<br/> <small>Target: August 5th</small> </span>
                         </div>
                     </div>
                     <div class="vertical-timeline-block">
@@ -194,7 +194,7 @@ mixpanel.init("0cde89a4e40858e69b40bfdc9bf6a020");</script>
                             <p>Deploy website to a small group of users to begin populating database and gathering feedback to drive requirements and continuous development.
                             </p>
                             <a href="#" class="btn btn-xs btn-primary"> More info</a>
-                            <span class="vertical-date">Weeks 7 - 12<br/> <small>Target: Saturday, September 9th</small> </span>
+                            <span class="vertical-date">Weeks 7 - 12<br/> <small>Target: September 9th</small> </span>
                         </div>
                         </div>
                     
@@ -212,7 +212,7 @@ mixpanel.init("0cde89a4e40858e69b40bfdc9bf6a020");</script>
         </div>
     </div>
 
-</section> -->
+</section>
 <section id="contact" class="gray-section contact">
         <div class="container">
             <div class="row m-b-lg">
